# fluksos

./: Cargo.toml  README.md  run.sh  x86_64-fluksos.json
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/drivers/: mod.rs  pci_driver.rs  virtio_network_adapter.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
