[package]
name = "schkool"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9.7"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "schkool"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "link-arg=-nostartfiles"]

[target.'cfg(target_os = "windows")']
rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]

[target.'cfg(target_os = "macos")']
rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]
