[package]
name = "fluksos"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fluksos"
test = true
bench = false

[dependencies]
bootloader = "0.9.7"
volatile = "0.2.6"
spin = "0.10.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# [target.'cfg(target_os = "linux")']
# rustflags = ["-C", "link-arg=-nostartfiles"]

# [target.'cfg(target_os = "windows")']
# rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]

# [target.'cfg(target_os = "macos")']
# rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]
