[package]
name = "fluksos"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fluksos"
test = true
bench = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.7", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.10.0"
x86_64 = "0.15.4"
uart_16550 = "0.4.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-timeout = 60 # Timeout test after a minute.
test-success-exit-code = 33 

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# [target.'cfg(target_os = "linux")']
# rustflags = ["-C", "link-arg=-nostartfiles"]

# [target.'cfg(target_os = "windows")']
# rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]

# [target.'cfg(target_os = "macos")']
# rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]
